plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.fitnesscamp'
version = '1.0.0'

java {
    sourceCompatibility = '17'
}

bootRun {
    jvmArgs(['--enable-native-access=ALL-UNNAMED'])
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // Thymeleaf extras for Spring Security
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    
    // MySQL Driver
    runtimeOnly 'com.mysql:mysql-connector-j'
    
    // H2 for development/testing
    runtimeOnly 'com.h2database:h2'
    
    // Lombok for reducing boilerplate
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Dev tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
